--- a/package.json
+++ b/package.json
@@ -4,8 +4,12 @@
   "private": true,
   "dependencies": {
     "react": "^16.8.2",
+    "react-circular-progressbar": "^1.0.0",
     "react-dom": "^16.8.2",
-    "react-scripts": "2.1.5"
+    "react-dropzone": "^8.2.0",
+    "react-icons": "^3.4.0",
+    "react-scripts": "2.1.5",
+    "styled-components": "^4.1.3"
   },
   "scripts": {
     "start": "react-scripts start",
