--- a/package.json
+++ b/package.json
@@ -4,6 +4,8 @@
   "private": true,
   "dependencies": {
     "axios": "0.18.0",
+    "filesize": "^4.1.2",
+    "lodash": "^4.17.11",
     "react": "^16.8.2",
     "react-circular-progressbar": "^1.0.0",
     "react-dom": "^16.8.2",
